--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -467,6 +467,8 @@ img {
   background-color: white;
 }
 
+.subWork {display: none;}
+
 .columns {
   column-count: 2;
   column-gap: 25px;
@@ -1244,7 +1246,8 @@ img {
   position: fixed;
   right: 1rem;
   bottom: -20%;
-  background-color: var(--first-color);
+  background-color: white;
+  border: .5px solid burlywood;
   opacity: .8;
   padding: 0 .3rem;
   border-radius: .4rem;
@@ -1254,6 +1257,7 @@ img {
 
 .scrollup:hover {
   background-color: var(--first-color-alt);
+  color: white;
 }
 
 .scrollup__icon {
@@ -1265,6 +1269,10 @@ img {
 .show-scroll {
   bottom: 5rem;
 }
+
+/* #try {
+  display: none;
+} */
 
 /*========== SCROLL BAR ==========*/
 ::-webkit-scrollbar {
@@ -1284,20 +1292,26 @@ img {
 
 /*==================== MEDIA QUERIES ====================*/
 /* For small devices */
-@media screen and (max-width: 350px) {
+@media screen and (max-width: 395px) {
   .main {
     margin: 0;
   }
 
-  body {
-    /* border: 2px solid blue; */
+  * {
+    box-sizing: border-box;
+    padding: 0;
     margin: 0;
-    background-color: white;
+  }
+
+  body {
+    margin: 0;
+    width: 100%;
+    height: 70%;
   }
 
   .container {
     margin: 0;
-    padding: 3px;
+    padding: 0;
   }
 
   .header {
@@ -1390,8 +1404,13 @@ img {
 
   .home__blob {
     width: 180px;
-
   }
+
+  .if {
+    display: none;
+  }
+    
+  .subWork {display: block;}
 
   .skills__title {
     font-size: var(--normal-font-size);
@@ -1437,6 +1456,10 @@ img {
 
   }
 
+  .column__text > p{
+    padding-top: 0;
+  }
+
   #space {
     display: none;
   }
@@ -1466,9 +1489,8 @@ img {
   }
 
 
-  .column__text>h3 {
+  .column__text > h3 {
     text-align: left;
-    /* border: 2px solid red; */
   }
 
   .column__text>p {
@@ -1478,7 +1500,8 @@ img {
   }
 
   .resume {
-    width: 100%;
+    width: auto;
+    margin-left: 35px;
   }
 
   .message {
@@ -1512,6 +1535,10 @@ img {
     text-align: center;
   }
 
+  #try {
+    display: block;
+  }
+
 
 }
 
@@ -1525,6 +1552,7 @@ img {
     grid-column: initial;
 
   }
+
 
   .home__img {
     order: 1;
@@ -1545,6 +1573,8 @@ img {
     grid-template-columns: .6fr;
     justify-content: center;
   }
+
+  
 }
 
 @media screen and (min-width: 768px) {
@@ -1606,6 +1636,7 @@ img {
   .work__container {
     box-sizing: border-box;
   }
+
 
   .change-theme {
     margin: 0;
@@ -1861,7 +1892,4 @@ img {
     grid-template-columns: repeat(2, 1fr);
   }
 
-  /* .nav__toggle{
-    display: none;
-  } */
 }
