--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1472,8 +1472,10 @@ img {
   }
 
   .resume {
+    /* border: 1px solid red;
+    margin: 0;
     width: auto;
-    margin-left: 35px;
+    margin-left: 35px; */
   }
 
   .message {
@@ -1511,41 +1513,264 @@ img {
   #try {
     display: block;
   }
-  /* 
-  .close {
-    border: 1px solid red;
-    justify-content: center;
-  } */
 }
 
 /* For medium devices */
-@media screen and (min-width: 568px) {
-  .home__container {
-    grid-template-columns: max-content 1fr 1fr;
+@media screen and (max-width: 568px) {
+  .main {
+    margin: 0;
   }
 
-  .home__data {
-    grid-column: initial;
+  * {
+    box-sizing: border-box;
+    padding: 0;
+    margin: 0;
+  }
+
+  body {
+    margin: 0;
+    width: 100%;
+    height: 70%;
+  }
+
+  .container {
+    margin: 0;
+    padding: 0;
+  }
+
+  .header {
+    top: 0;
+    height: 53px;
+    background-color: whitesmoke;
+    box-shadow: 0 -1px 4px rgba(0, 0, 0.15);
+    border-bottom: 0.5px solid #000;
+    position: fixed;
+    border-bottom-left-radius: 5px;
+    border-bottom-right-radius: 5px;
+    /* border-radius: 5px; */
+  }
+
+  .nav-container {
+    top: 0;
+    height: 40px;
+    position: fixed;
+    justify-content: space-between;
+    width: 100%;
+  }
+
+  .nav__menu {
+    border: .5px solid goldenrod;
+  }
+
+  .nav__logo {
+    top: 0;
+  }
+
+  .nav__list {
+    column-gap: 0;
+    padding: 0;
+    margin-bottom: 0;
+  }
+
+  .nav__close {
+    position: absolute;
+    right: 10.2rem;
+    /* bottom: 0.5rem; */
+    font-size: 2.5rem;
+    cursor: pointer;
+    color: var(--first-color);
+  }
+
+  .nav__toggle {
+    font-size: 2.1 rem;
+    cursor: pointer;
+    margin: 0;
+    padding: 0;
+    padding-left: 12px;
+  }
+
+  .uil-apps {
+    font-size: 2.1rem;
+    margin: 0;
+    padding: 0;
+  }
+
+  .home__container {
+    padding: 0;
+    height: auto;
+  }
+
+  .home__content {
+    display: block;
+    background-position: right;
+    padding: 0;
+    margin: 0;
   }
 
   .home__img {
-    order: 1;
-    justify-self: center;
+    display: block;
   }
 
-  .about__container,
-  .skills__container,
-  .portfolio__content,
-  .project__container,
-  .contact__container,
-  .footer__container {
-    grid-template-columns: repeat(2, 1fr);
+  .home__img > img {
+    height: auto;
   }
 
-  .qualification__section {
-    display: grid;
-    grid-template-columns: 0.6fr;
+  .home__title {
+    display: block;
+    margin-bottom: 35px;
+  }
+
+  .home__subtitle {
+    display: block;
+  }
+
+  .home__subtitleII {
+    display: none;
+  }
+
+  .home__container {
+    /* box-sizing: border-box; */
+    margin: 0;
+    height: 500px;
+  }
+
+  .home__blob {
+    width: 180px;
+  }
+
+  .if {
+    display: none;
+  }
+
+  .subWork {
+    display: block;
+  }
+
+  .skills__title {
+    font-size: var(--normal-font-size);
+  }
+
+  .qualification__data {
+    gap: 0.5rem;
+  }
+
+  .qualification__tabs {
+    margin-bottom: 0;
+  }
+
+  .services {
+    display: block;
+  }
+
+  .services__container {
+    display: block;
     justify-content: center;
+  }
+
+  .services__content {
+    padding-right: 3.5rem;
+    /* border: 1px solid green; */
+    margin-bottom: 5px;
+  }
+
+  .services__modal {
+    padding: 0 0.5rem;
+  }
+
+  .project__img {
+    width: 200px;
+  }
+
+  .work__container {
+    display: block;
+    justify-content: center;
+  }
+
+  .column__text > p {
+    padding-top: 0;
+  }
+
+  #space {
+    display: none;
+  }
+
+  .resume > h4 {
+    margin-top: 40px;
+  }
+
+  .columns {
+    columns: 1;
+    display: block;
+    width: 100%;
+    margin-bottom: 30px;
+    background-image: url(/assets/img/vector.jpg);
+    /* background-position: center; */
+    background-position: right;
+  }
+
+  #space {
+    margin-top: 3px;
+  }
+
+  .column__img {
+    display: none;
+  }
+
+  .column__text > h3 {
+    text-align: left;
+  }
+
+  .column__text > p {
+    text-align: left;
+    padding-top: 10px;
+    margin: 0;
+    color: black;
+    /* color: var(--text-color); */
+  }
+
+  .resume {
+    width: auto;
+    /* margin-left: 40px; */
+  }
+
+  .message {
+    width: 100%;
+    text-align: center;
+    padding: 0;
+  }
+
+  .contact__container {
+    display: block;
+    gap: 0;
+  }
+
+  .contact {
+    padding-top: 0;
+  }
+
+  .contact__img {
+    display: block;
+  }
+
+  .message > button {
+    text-align: center;
+    display: table-cell;
+    vertical-align: middle;
+    margin-bottom: 0;
+    margin-top: 0;
+  }
+
+  .message {
+    text-align: center;
+  }
+
+  #try {
+    display: block;
+  }
+
+  .nav__close {
+    /* border: 1px solid red; */
+    margin-right: 24px;
   }
 }
 
